--- a/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
@@ -67,7 +67,7 @@
                                        <children>
                                           <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="150.0" layoutX="30.0" layoutY="30.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="3.0" width="150.0" />
                                           <ImageView fx:id="OrganizationAvatar" fitHeight="145.0" fitWidth="145.0" layoutX="32.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
-                                          <Label fx:id="OrganizationName" layoutX="240.0" layoutY="30.0" text="ООО КРОВОСТОК" textFill="#00d29d">
+                                          <Label fx:id="OrganizationName" layoutX="240.0" layoutY="30.0" text="ОРГАНИЗАЦИЯ" textFill="#00d29d">
                                              <font>
                                                 <Font name="System Bold" size="24.0" />
                                              </font>
@@ -132,14 +132,14 @@
                                                 <Font size="16.0" />
                                              </font>
                                           </Label>
-                                          <Button fx:id="OrganizationChangeButton" layoutX="500.0" layoutY="30.0" mnemonicParsing="false" onAction="#OrganizationChangeButtonClick" prefHeight="20.0" prefWidth="120.0" styleClass="change-button" text="Изменить">
+                                          <Button fx:id="OrganizationChangeButton" disable="true" layoutX="500.0" layoutY="30.0" mnemonicParsing="false" onAction="#OrganizationChangeButtonClick" prefHeight="20.0" prefWidth="120.0" styleClass="change-button" text="Изменить" visible="false">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                           </Button>
                                           <ImageView fx:id="OwnerAvatar" fitHeight="80.0" fitWidth="80.0" layoutX="52.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" />
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="55.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
-                                          <Line endX="-51.39996337890625" endY="0.5999832153320312" layoutX="525.0" layoutY="55.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0">
+                                          <Line endX="-51.39996337890625" endY="1.0" layoutX="525.0" layoutY="55.0" startX="-122.99995422363281" startY="1.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0">
                                              <rotationAxis>
                                                 <Point3D />
                                              </rotationAxis>
@@ -147,7 +147,7 @@
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="175.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="215.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="255.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
-                                          <TextArea layoutX="400.0" layoutY="70.0" prefHeight="200.0" prefWidth="700.0" text="Я родился в Москве в 70-м на краю города&#10;Моча рано ударила в голову&#10;В 4 активно ругался матом; в детском саду&#10;Девочки впервые показали мне пизду">
+                                          <TextArea disable="true" layoutX="377.0" layoutY="63.0" prefHeight="200.0" prefWidth="700.0" text="Описание организации!&#10;">
                                              <font>
                                                 <Font size="16.0" />
                                              </font>
