--- a/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
@@ -147,7 +147,7 @@
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="175.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="215.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
                                           <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="255.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
-                                          <TextArea disable="true" layoutX="377.0" layoutY="63.0" prefHeight="200.0" prefWidth="700.0" text="Описание организации!&#10;">
+                                          <TextArea fx:id="OrganizationDescription" disable="true" layoutX="400.0" layoutY="63.0" prefHeight="200.0" prefWidth="700.0" text="Описание организации!&#10;">
                                              <font>
                                                 <Font size="16.0" />
                                              </font>
@@ -213,7 +213,7 @@
    <left>
       <AnchorPane prefHeight="704.0" prefWidth="62.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="2.0" layoutY="50.0" styleClass="previous-screen-button" text="&lt;" />
+            <Label layoutX="2.0" layoutY="50.0" onMouseClicked="#PreviousScreenButtonClicked" styleClass="previous-screen-button" text="&lt;" />
          </children>
       </AnchorPane>
    </left>
