--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen_v2.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen_v2.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MemberShowTicketScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MemberShowTicketScreen_v2Controller">
     <top>
         <HBox alignment="CENTER_LEFT" maxHeight="64.0" maxWidth="1366.0" minHeight="64.0" minWidth="1366.0" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER_LEFT">
             <children>
@@ -63,49 +63,44 @@
                         </AnchorPane>
                         <AnchorPane prefHeight="609.0" prefWidth="890.0">
                            <children>
-                              <AnchorPane layoutX="140.0" layoutY="10.0" prefHeight="484.0" prefWidth="740.0" styleClass="pane-borders">
+                              <AnchorPane layoutX="42.0" prefHeight="490.0" prefWidth="830.0" styleClass="pane-borders">
                                  <children>
-                                    <Label fx:id="TicketName" layoutX="40.0" layoutY="20.0" prefHeight="40.0" prefWidth="650.0" text="Название обращения">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <Label layoutX="40.0" layoutY="60.0" text="Описание">
+                                    <Label layoutX="150.0" layoutY="60.0" text="Описание">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
                                     </Label>
-                                    <Line endX="-33.000030517578125" endY="1.1999588012695312" layoutX="165.0" layoutY="88.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="4.0" />
-                                    <TextArea disable="true" layoutX="40.0" layoutY="100.0" prefHeight="358.0" prefWidth="650.0" promptText="ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ">
+                                    <Line endX="-33.000030517578125" endY="1.1999588012695312" layoutX="274.0" layoutY="88.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="4.0" />
+                                    <ImageView fx:id="CreatorAvatar" fitHeight="100.0" fitWidth="100.0" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Text fx:id="CreatorFullName" layoutX="20.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ФИО создателя" wrappingWidth="120.0">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
-                                    </TextArea>
-                                    <Button fx:id="AuthorTicketChange" layoutX="160.0" layoutY="65.0" mnemonicParsing="false" onAction="#AuthorTicketChangeClicked" prefHeight="15.0" prefWidth="94.0" styleClass="change-button" text="Изменить">
+                                    </Text>
+                                    <Text fx:id="CreatorRole" layoutX="20.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Роль создателя" wrappingWidth="120.0">
                                        <font>
-                                          <Font size="14.0" />
+                                          <Font size="16.0" />
                                        </font>
-                                    </Button>
+                                    </Text>
+                                    <Text fx:id="TicketTitle" layoutX="150.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название тикета" wrappingWidth="600.0">
+                                       <font>
+                                          <Font name="System Bold" size="20.0" />
+                                       </font>
+                                    </Text>
+                                    <JFXTextArea fx:id="TicketDescription" disable="true" layoutX="150.0" layoutY="100.0" prefHeight="360.0" prefWidth="650.0" text="ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ОПИСАНИЕ ">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </JFXTextArea>
                                  </children>
                               </AnchorPane>
-                              <ImageView fx:id="CreatorAvatar" fitHeight="100.0" fitWidth="100.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
-                              <Label fx:id="CreatorFName" layoutX="10.0" layoutY="120.0" prefHeight="30.0" prefWidth="120.0" text="Имя">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="CreatorSName" layoutX="10.0" layoutY="150.0" prefHeight="30.0" prefWidth="120.0" text="Фамилия">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
                            </children>
                         </AnchorPane>
                      </children>
                   </VBox>
                   <AnchorPane prefHeight="706.0" prefWidth="465.0">
                      <children>
-                        <AnchorPane layoutX="30.0" layoutY="103.0" prefHeight="475.0" prefWidth="340.0" styleClass="pane-borders">
+                        <AnchorPane layoutX="30.0" layoutY="93.0" prefHeight="490.0" prefWidth="340.0" styleClass="pane-borders">
                            <children>
                               <Label layoutX="30.0" layoutY="30.0" text="Статус:" textFill="#00d29d">
                                  <font>
@@ -142,84 +137,84 @@
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="TicketStatus" layoutX="190.0" layoutY="30.0" text="Активен">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketType" layoutX="190.0" layoutY="70.0" text="Ошибка">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketSoftware" layoutX="190.0" layoutY="110.0" text="Service Desk">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketModuleSoftware" layoutX="190.0" layoutY="150.0" text="Профиль пред.">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketCreateDate" layoutX="190.0" layoutY="190.0" text="00.00.00">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketChangeDate" layoutX="190.0" layoutY="230.0" text="00.00.00">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="TicketProcessingDate" layoutX="190.0" layoutY="270.0" text="00.00.00">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <ImageView fx:id="AuthorAvatar" fitHeight="60.0" fitWidth="60.0" layoutX="30.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true" />
-                              <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="30.0" layoutY="410.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="TicketCreatorAvatar" fitHeight="60.0" fitWidth="60.0" layoutX="30.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true" />
+                              <ImageView fx:id="TicketHelperAvatar" fitHeight="60.0" fitWidth="60.0" layoutX="30.0" layoutY="400.0" pickOnBounds="true" preserveRatio="true" />
                               <Label layoutX="100.0" layoutY="320.0" text="Автор обращения" textFill="#00d29d">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="AuthorFName" layoutX="100.0" layoutY="350.0" text="Имя Автрора">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="AuthorSName" layoutX="100.0" layoutY="370.0" text="Фамилия Автора">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="100.0" layoutY="410.0" text="Исполнитель" textFill="#00d29d">
+                              <Label layoutX="100.0" layoutY="400.0" text="Исполнитель" textFill="#00d29d">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="DeveloperFName" layoutX="100.0" layoutY="440.0" text="Имя Исполнителя">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="DeveloperSName" layoutX="100.0" layoutY="460.0" text="Фамилия Исполнителя">
-                                 <font>
-                                    <Font size="16.0" />
-                                 </font>
-                              </Label>
                               <Line endX="156.73336791992188" endY="1.1999969482421875" layoutX="155.0" layoutY="53.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
-                              <Line endX="24.399993896484375" endY="1.0" layoutX="219.0" layoutY="433.0" startX="-118.00003051757812" startY="1.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                              <Line endX="24.399993896484375" endY="1.0" layoutX="219.0" layoutY="423.0" startX="-118.00003051757812" startY="1.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                              <Text fx:id="TicketCreatorFullName" layoutX="100.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ФИО автора" wrappingWidth="230.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketCreatorRole" layoutX="100.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Роль Автора" wrappingWidth="230.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketHelperFullName" layoutX="100.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ФИО исполнителя" wrappingWidth="230.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketHelperRole" layoutX="100.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Роль исполнителя" wrappingWidth="230.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketStatus" layoutX="190.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Активен">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketCategory" layoutX="190.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Вопрос">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketSoftware" layoutX="190.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Service Desk" wrappingWidth="130.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketModule" layoutX="190.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Авторизация" wrappingWidth="130.0">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketCreationDate" layoutX="190.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00.00.00">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketChangeDate" layoutX="190.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00.00.00">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="TicketProcessingDate" layoutX="190.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00.00.00">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Text>
                            </children>
                         </AnchorPane>
-                        <Button fx:id="AuthorReopenButton" layoutX="30.0" layoutY="610.0" mnemonicParsing="false" onAction="#AuthorReopenButtonClicked" prefHeight="70.0" prefWidth="340.0" styleClass="reopen-ticket-button" text="Запрос на переоткрытие обращения">
+                        <Button fx:id="AuthorReopenButton" layoutX="30.0" layoutY="600.0" mnemonicParsing="false" onAction="#AuthorReopenButtonClicked" prefHeight="70.0" prefWidth="340.0" styleClass="reopen-ticket-button" text="Запрос на переоткрытие обращения">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Button>
-                        <Button fx:id="DeveloperRedTicketButton" disable="true" layoutX="30.0" layoutY="20.0" mnemonicParsing="false" onAction="#DeveloperRedTicketButtonClicked" prefHeight="70.0" prefWidth="340.0" styleClass="reopen-ticket-button" text="Редактировать данные по обращению" visible="false" />
-                        <Line endX="24.399993896484375" endY="1.0" layoutX="249.0" layoutY="445.0" startX="-118.00003051757812" startY="1.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                        <Button fx:id="DeveloperRedTicketButton" disable="true" layoutX="30.0" layoutY="10.0" mnemonicParsing="false" onAction="#DeveloperRedTicketButtonClicked" prefHeight="70.0" prefWidth="340.0" styleClass="reopen-ticket-button" text="Редактировать данные по обращению" visible="false" />
+                        <Line endX="24.399993896484375" endY="1.0" layoutX="249.0" layoutY="435.0" startX="-118.00003051757812" startY="1.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
                      </children>
                   </AnchorPane>
                </children>
