--- a/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -52,12 +54,15 @@
    <center>
       <Pane prefHeight="500.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="133.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
+            <Text layoutX="133.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
             <AnchorPane layoutX="133.0" layoutY="80.0" prefHeight="500.0" prefWidth="1100.0" styleClass="pane-borders">
                <children>
-                  <Button fx:id="ChangeProfileButton" defaultButton="true" mnemonicParsing="false" onAction="#ChangeProfile" styleClass="main-button" text="Редактировать профиль" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="25.0" />
+                  <Button fx:id="ChangeProfileButton" defaultButton="true" layoutY="31.0" mnemonicParsing="false" onAction="#ChangeProfile" prefHeight="33.0" prefWidth="213.0" styleClass="main-button" text="Редактировать профиль" AnchorPane.rightAnchor="128.0" AnchorPane.topAnchor="28.0" />
                   <ImageView fx:id="Avatar" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="120.0" />
-                  <Button fx:id="LogOutButton" mnemonicParsing="false" onAction="#LogOut" styleClass="big-button" text="Выйти из аккаунта" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="450.0" AnchorPane.rightAnchor="450.0" />
+                  <Button fx:id="LogOutButton" layoutX="430.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="60.0" prefWidth="250.0" styleClass="reopen-ticket-button" text="Выйти из аккаунта" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="433.0" AnchorPane.rightAnchor="426.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
                   <Text fx:id="FullName" layoutX="57.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Юзерко Юзер Юзерович" AnchorPane.leftAnchor="125.0" />
                   <VBox layoutX="453.0" layoutY="123.0" prefHeight="256.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="450.0" AnchorPane.topAnchor="123.0">
                      <children>
@@ -86,6 +91,8 @@
                   </VBox>
                </children>
             </AnchorPane>
+            <Label layoutX="2.0" layoutY="50.0" onMouseClicked="#PreviousScreenButtonClicked" styleClass="previous-screen-button" text="&lt;" />
+            <Line endX="-1.6" endY="1.5" layoutX="261.0" layoutY="59.0" startX="-126.0" startY="1.5" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="5.0" />
          </children>
          <BorderPane.margin>
             <Insets />
