--- a/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
@@ -33,7 +33,7 @@
                   <Font size="36.0" />
                </font>
             </Text>
-            <Text fx:id="Statistics" fill="WHITE" layoutX="450.0" layoutY="54.0" onMouseClicked="#StatisticsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Статистика" textAlignment="CENTER" wrappingWidth="200.0">
+            <Text fx:id="Statistics" disable="true" fill="WHITE" layoutX="450.0" layoutY="54.0" onMouseClicked="#StatisticsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Статистика" textAlignment="CENTER" visible="false" wrappingWidth="200.0">
                <font>
                   <Font size="36.0" />
                </font>
