--- a/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperProfileScreen.fxml
@@ -59,7 +59,7 @@
                <children>
                   <Button fx:id="ChangeProfileButton" defaultButton="true" layoutY="31.0" mnemonicParsing="false" onAction="#ChangeProfile" prefHeight="33.0" prefWidth="213.0" styleClass="main-button" text="Редактировать профиль" AnchorPane.rightAnchor="128.0" AnchorPane.topAnchor="28.0" />
                   <ImageView fx:id="Avatar" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="120.0" />
-                  <Button fx:id="LogOutButton" layoutX="430.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="60.0" prefWidth="250.0" styleClass="reopen-ticket-button" text="Выйти из аккаунта" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="433.0" AnchorPane.rightAnchor="426.0">
+                  <Button fx:id="LogOutButton" layoutX="430.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="60.0" prefWidth="250.0" styleClass="main-button-v3" text="Выйти из аккаунта" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="433.0" AnchorPane.rightAnchor="426.0">
                      <font>
                         <Font size="16.0" />
                      </font></Button>
