--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen_v2.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen_v2.fxml
@@ -176,7 +176,7 @@
                                     <Font size="16.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="TicketCategory" layoutX="190.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Вопрос">
+                              <Text fx:id="TicketCategory" layoutX="190.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Вопрос" wrappingWidth="130.0">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
