--- a/serviceDesk_client/src/main/resources/views/DeveloperShowTicketScreen_v2.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperShowTicketScreen_v2.fxml
@@ -194,8 +194,8 @@
                                                 <Font size="16.0" />
                                             </font>
                                         </Text>
-                              <ChoiceBox fx:id="TicketStatus" layoutX="190.0" layoutY="15.0" prefHeight="30.0" prefWidth="110.0" styleClass="create-object-ChoiceBox" />
-                              <ChoiceBox fx:id="TicketHelperFullName" layoutX="100.0" layoutY="480.0" prefHeight="30.0" prefWidth="220.0" styleClass="create-object-ChoiceBox" />
+                              <ChoiceBox fx:id="TicketStatuses" onAction="#ChangeStatus" layoutX="190.0" layoutY="15.0" prefHeight="30.0" prefWidth="110.0" styleClass="create-object-ChoiceBox" />
+                              <ChoiceBox fx:id="TicketHelperFullName" onAction="#SetTicketHelper" layoutX="100.0" layoutY="480.0" prefHeight="30.0" prefWidth="220.0" styleClass="create-object-ChoiceBox" />
                                     </children>
                                 </AnchorPane>
                                 <Button fx:id="AuthorReopenButton" disable="true" layoutX="30.0" layoutY="600.0" mnemonicParsing="false" onAction="#AuthorReopenButtonClicked" prefHeight="70.0" prefWidth="340.0" styleClass="reopen-ticket-button" text="Запрос на переоткрытие обращения" visible="false">
